--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@hyperjump/json-schema": "^1.9.6",
+    "markdownlint-cli": "^0.41.0",
     "mdv": "^1.3.4",
     "vitest": "^2.0.5",
     "yaml": "^2.5.0"
