--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "Swagger",
     "schema",
     "API"
-  ]
+  ],
+  "scripts": {
+    "format-markdown": "npx prettier --write --single-quote versions/3.1.1.md && npx --yes markdownlint-cli --fix --config .markdownlint.yaml versions/3.1.1.md"
+  }
 }
