--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "API"
   ],
   "scripts": {
-    "format-markdown": "npx prettier --write --single-quote versions/3.2.0.md && npx --yes markdownlint-cli --fix --config .markdownlint.yaml versions/3.2.0.md"
+    "format-markdown": "bash ./scripts/format-markdown.sh ./versions/3.2.0.md"
   }
 }
