--- a/.github/workflows/schema-tests.yaml
+++ b/.github/workflows/schema-tests.yaml
@@ -4,8 +4,11 @@ name: schema-test
 # Issue: https://github.com/OAI/OpenAPI-Specification/pull/2489
 
 #
-# This workflow runs the npm test script to validate passing and failing
-# testcases for the metaschema.
+# This workflow
+# - converts the YAML metaschemas to JSON
+# - runs the npm test script to validate passing and failing
+#   testcases for the metaschemas
+# - checks in changed JSON files
 #
 
 # run this on push to any branch and creation of pull-requests
@@ -23,13 +26,19 @@ jobs:
     - uses: actions/checkout@v4 # checkout repo content
       with:
         fetch-depth: 0
+
     - uses: actions/setup-node@v4 # setup Node.js
       with:
         node-version: '20.x'
+
     - name: Install dependencies from main
       run: |
         git checkout remotes/origin/main -- package.json package-lock.json
         npm ci
+
+    - name: convert YAML metaschemas to JSON
+      run: find schemas/v3* -type f -name "*.yaml" | xargs node scripts/yaml2json/yaml2json.js
+
     - name: Run tests
       run: npm run test
 
