--- a/.github/workflows/schema-publish.yaml
+++ b/.github/workflows/schema-publish.yaml
@@ -50,8 +50,8 @@ jobs:
         delete-branch: true
         path: deploy
         labels: Housekeeping,Schema
-        reviewers: OAI/tsc #TODO: check if this works, or if groups need a different parameter
-        # team-reviewers: OAI/tsc #TODO: check if this works, or if it needs a special access token
+        # reviewers: OAI/tsc #TODO: check if this works, or if groups need a different parameter
+        team-reviewers: OAI/tsc #TODO: check if this works, or if it needs a special access token
         title: Publish OpenAPI Metaschema Iterations
         commit-message: New OpenAPI metaschema iterations
         signoff: true
