--- a/.github/workflows/validate-markdown.yaml
+++ b/.github/workflows/validate-markdown.yaml
@@ -29,7 +29,5 @@ jobs:
         node-version: '20.x'
     - name: Validate markdown
       run: npx --yes mdv versions/3.*.md
-    - name: Lint markdown v3.0.4
-      run: npx --yes markdownlint-cli --config .markdownlint.yaml versions/3.0.4.md
-    - name: Lint markdown v3.1.1
-      run: npx --yes markdownlint-cli --config .markdownlint.yaml versions/3.1.1.md
+    - name: Lint markdown 3.0.4, 3.1.1, and later
+      run: npx --yes markdownlint-cli --config .markdownlint.yaml versions/3.0.4.md versions/3.1.[^0].md versions/3.[2-9].*.md
