--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "bash ./scripts/md2html/build.sh",
-    "test": "c8 --100 vitest --watch=false"
+    "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh"
   },
   "readmeFilename": "README.md",
   "files": [
