--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "bash ./scripts/md2html/build.sh",
-    "test": "c8 --100 vitest --watch=false"
+    "test": "c8 --100 vitest --watch=false",
+    "validate-markdown": "npx mdv src/oas.md && npx markdownlint-cli src/oas.md"
   },
   "readmeFilename": "README.md",
   "files": [
