--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # theme: just-the-docs
 remote_theme: just-the-docs/just-the-docs
 color_scheme: oai
-title: OpenAPI Initiative Registry
-description: Extensible data value repository
+title: OpenAPI Initiative Publications
+description: Specifications, registries, and schemas
 show_downloads: true
 excerpt_separator: ""
 collections_dir: /registries
@@ -63,6 +63,8 @@ aux_links:
     - "https://spec.openapis.org/oas/latest.html"
   "Latest Arazzo Specification":
     - "https://spec.openapis.org/arazzo/latest.html"
+  "Latest Overlay Specification":
+    - "https://spec.openapis.org/overlay/latest.html"
 footer_content: "\xA9 2024 OpenAPI Initiative.
  <br />This work is licensed under the <a rel=\"license\" href=\"https://www.apache.org/licenses/LICENSE-2.0\"\
   >Apache 2.0 License</a>. This site is\
