--- a/.github/workflows/schema-tests.yaml
+++ b/.github/workflows/schema-tests.yaml
@@ -29,9 +29,7 @@ jobs:
         node-version: '20.x'
 
     - name: Install dependencies from main
-      run: |
-        git checkout remotes/origin/main -- package.json package-lock.json
-        npm ci
+      run: npm ci
 
     - name: Run tests
       run: npm run test
