--- a/.github/workflows/schema-tests.yaml
+++ b/.github/workflows/schema-tests.yaml
@@ -28,7 +28,7 @@ jobs:
       with:
         node-version: '20.x'
 
-    - name: Install dependencies from main
+    - name: Install dependencies
       run: npm ci
 
     - name: Run tests
