--- a/.github/workflows/respec.yaml
+++ b/.github/workflows/respec.yaml
@@ -18,7 +18,7 @@ on:
 jobs:
   respec:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4 # checkout main branch
