--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "bash ./scripts/md2html/build.sh",
+    "build-schemas": "bash ./scripts/schema-publish.sh",
     "build-src": "npm run validate-markdown && bash ./scripts/md2html/build-src.sh",
     "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh",
     "validate-markdown": "npx mdv src/oas.md && npx markdownlint-cli src/oas.md"
