Run only on changes to inputs and scripts

--- a/.github/workflows/schema-publish.yaml
+++ b/.github/workflows/schema-publish.yaml
@@ -12,6 +12,10 @@ on:
   push:
     branches:
       - vX.Y-dev
+    paths:
+      - 'src/schemas/validation/*.yaml'
+      - 'scripts/schema-publish.sh'
+      - '.github/workflows/schema-publish.yaml'
   workflow_dispatch: {}
 
 jobs:
