--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -2,7 +2,7 @@ $id: https://spec.openapis.org/oas/3.2/meta/WORK-IN-PROGRESS
 $schema: https://json-schema.org/draft/2020-12/schema
 
 title: OAS Base Vocabulary
-description: A JSON Schema Vocabulary used in the OpenAPI Schema Dialect
+description: A JSON Schema Vocabulary used in the OpenAPI JSON Schema Dialect
 
 $dynamicAnchor: meta
 
