--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "oas-schemas",
-  "version": "2.0.0",
-  "description": "OpenAPI Specification JSON schemas",
+  "name": "oas-infra",
+  "version": "0.0.0",
+  "description": "OpenAPI Specification Automation & Infrastructure",
   "author": {
     "name": "OpenAPI Initiative TSC",
     "email": "tsc@openapis.org",
@@ -16,11 +16,6 @@
     "build": "bash ./scripts/md2html/build.sh",
     "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh"
   },
-  "readmeFilename": "README.md",
-  "files": [
-    "README.md",
-    "schemas/*"
-  ],
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
     "highlight.js": "^11.11.1",
