--- a/tests/schema/pass/servers.yaml
+++ b/tests/schema/pass/servers.yaml
@@ -8,3 +8,18 @@ servers:
     description: Run locally.
   - url: https://production.com/v1
     description: Run on production server.
+  - url: https://{username}.gigantic-server.com:{port}/{basePath}
+    description: The production API server
+    variables:
+      username:
+        # note! no enum here means it is an open value
+        default: demo
+        description: A user-specific subdomain. Use `demo` for a free sandbox environment.
+      port:
+        enum:
+          - '8443'
+          - '443'
+        default: '8443'
+      basePath:
+        # open meaning there is the opportunity to use special base paths as assigned by the provider, default is `v2`
+        default: v2
