ci: adds a test value
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/tests/schema/pass/servers.yaml
+++ b/tests/schema/pass/servers.yaml
@@ -6,5 +6,6 @@ paths: {}
 servers:
   - url: /v1
     description: Run locally.
+    name: local
   - url: https://production.com/v1
     description: Run on production server.
