--- a/.github/workflows/validate-markdown.yaml
+++ b/.github/workflows/validate-markdown.yaml
@@ -28,7 +28,7 @@ jobs:
         node-version: '20.x'
 
     - name: Validate markdown
-      run: npx --yes mdv versions/3.*.md
+      run: npx --yes mdv versions/3.*.md src/oas.md
 
     - name: Lint markdown 3.0.4, 3.1.1, and later
-      run: npx --yes markdownlint-cli --config .markdownlint.yaml versions/3.0.4.md versions/3.1.[^0].md versions/3.[2-9].*.md
+      run: npx --yes markdownlint-cli --config .markdownlint.yaml versions/3.0.4.md versions/3.1.[^0].md versions/3.[2-9].*.md src/oas.md
