--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "bash ./scripts/md2html/build.sh",
-    "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh"
+    "build-src": "npm run validate-markdown && bash ./scripts/md2html/build.sh src && bash ./scripts/schema-publish.sh src",
+    "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh",
+    "format-markdown": "bash ./scripts/format-markdown.sh ./src/oas.md",
+    "validate-markdown": "npx mdv src/oas.md && npx markdownlint-cli src/oas.md"
   },
   "readmeFilename": "README.md",
   "files": [
