--- a/tests/schema/pass/security-scheme-object-examples.yaml
+++ b/tests/schema/pass/security-scheme-object-examples.yaml
@@ -28,13 +28,8 @@ components:
       description: Cert must be signed by example.com CA
     OAuth2:
       type: oauth2
+      oauth2MetadataUrl: https://example.com/api/oauth/metadata
       flows:
-        implicit:
-          authorizationUrl: https://example.com/api/oauth/dialog
-          scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
-          refreshUrl: https://example.com/api/oauth/refresh
         authorizationCode:
           authorizationUrl: https://example.com/api/oauth/dialog
           refreshUrl: https://example.com/api/oauth/refresh
@@ -49,6 +44,21 @@ components:
           refreshUrl: https://example.com/api/oauth/refresh
         clientCredentials:
           tokenUrl: https://example.com/api/oauth/token
+          scopes:
+            read:pets: read your pets
+          refreshUrl: https://example.com/api/oauth/refresh
+        deviceAuthorization:
+          deviceAuthorizationUrl: https://example.com/api/oauth/device
+          tokenUrl: https://example.com/api/oauth/token
+          scopes:
+            read:pets: read your pets
+          refreshUrl: https://example.com/api/oauth/refresh
+    OAuth2Old:
+      deprecated: true
+      type: oauth2
+      flows:
+        implicit:
+          authorizationUrl: https://example.com/api/oauth/dialog
           scopes:
             read:pets: read your pets
           refreshUrl: https://example.com/api/oauth/refresh
