--- a/tests/schema/pass/path-item-object-example.yaml
+++ b/tests/schema/pass/path-item-object-example.yaml
@@ -33,3 +33,23 @@ paths:
           items:
             type: string
         style: simple
+    additionalOperations:
+      query:
+        description: Returns pets based on ID
+        summary: Find pets by ID
+        operationId: queryPetsById
+        responses:
+          '200':
+            description: pet response
+            content:
+              '*/*':
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Pet'
+          default:
+            description: error payload
+            content:
+              text/html:
+                schema:
+                  $ref: '#/components/schemas/ErrorModel'
