--- a/tests/schema/pass/path-item-object-example.yaml
+++ b/tests/schema/pass/path-item-object-example.yaml
@@ -34,7 +34,7 @@ paths:
             type: string
         style: simple
     additionalOperations:
-      query:
+      QUERY:
         description: Returns pets based on ID
         summary: Find pets by ID
         operationId: queryPetsById
