Remove mdv, dependency is outdated and it mostly overlaps with markdownlint

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-src": "npm run validate-markdown && bash ./scripts/md2html/build.sh src && bash ./scripts/schema-publish.sh src",
     "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh",
     "format-markdown": "bash ./scripts/format-markdown.sh ./src/oas.md",
-    "validate-markdown": "npx mdv src/oas.md && npx markdownlint-cli src/oas.md"
+    "validate-markdown": "npx markdownlint-cli src/oas.md"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
