--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "bash ./scripts/md2html/build.sh",
     "build-src": "npm run validate-markdown && bash ./scripts/md2html/build.sh src && bash ./scripts/schema-publish.sh src",
     "test": "c8 --100 vitest --watch=false && bash scripts/schema-test-coverage.sh",
-    "format-markdown": "bash ./scripts/format-markdown.sh ./src/oas.md",
-    "validate-markdown": "npx markdownlint-cli src/oas.md"
+    "format-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml --fix src/oas.md && npx markdownlint-cli2 --fix *.md",
+    "validate-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml src/oas.md && npx markdownlint-cli2 *.md"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
