--- a/tests/schema/pass/path-item-object-example.yaml
+++ b/tests/schema/pass/path-item-object-example.yaml
@@ -34,10 +34,10 @@ paths:
             type: string
         style: simple
     additionalOperations:
-      QUERY:
-        description: Returns pets based on ID
-        summary: Find pets by ID
-        operationId: queryPetsById
+      COPY:
+        description: Copies pet information based on ID
+        summary: Copies pets by ID
+        operationId: copyPetsById
         responses:
           '200':
             description: pet response
