--- a/tests/schema/pass/path-item-object-example.yaml
+++ b/tests/schema/pass/path-item-object-example.yaml
@@ -23,6 +23,25 @@ paths:
             text/html:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
+    query:
+      description: Returns pets based on ID
+      summary: Find pets by ID
+      operationId: queryPetsById
+      responses:
+        '200':
+          description: pet response
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        default:
+          description: error payload
+          content:
+            text/html:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
     parameters:
       - name: id
         in: path
