respec workflow only on demand

--- a/.github/workflows/respec.yaml
+++ b/.github/workflows/respec.yaml
@@ -8,11 +8,8 @@ name: respec
 # on the gh-pages branch when the corresponding markdown files change.
 #
 
-# run this on push to main
+# run this manually from main
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch: {}
 
 jobs:
