--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@hyperjump/json-schema": "^1.12.1",
     "c8": "^10.1.3",
+    "markdownlint-cli2": "^0.17.2",
     "vitest": "^3.1.1",
     "yaml": "^2.7.1"
   },
