Schema for itemSchema Media Type Object field
Co-authored-by: Karen Etheridge <ether@cpan.org>

--- a/tests/schema/pass/media-type-examples.yaml
+++ b/tests/schema/pass/media-type-examples.yaml
@@ -30,6 +30,9 @@ paths:
                   breed: Mixed
               frog:
                 $ref: '#/components/examples/frog-example'
+          application/jsonl:
+            itemSchema:
+              $ref: '#components/schemas/Pet'
           application/x-www-form-urlencoded:
             schema:
               type: object
