Support all common XML node types
This change adds a nodeType field to support the four most
commonly used XML node types: element, attribute, text, and cdata.
A fifth nodetype, none, is used to prevent a Schema Object from
producing a node.

This also removes the restriction on where the xml field and
XML Object can appear, as the nodeType system is more flexible
than the old system.

This deprecates two existing fields:

* attribute, replaced by nodeType: attribute
* wrapped, replaced by nodeType: none

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -55,8 +55,14 @@ $defs:
   xml:
     $ref: '#/$defs/extensible'
     properties:
-      attribute:
-        type: boolean
+      nodeType:
+        type: string
+        enum:
+          - element
+          - attribute
+          - text
+          - cdata
+          - none
       name:
         type: string
       namespace:
@@ -64,7 +70,14 @@ $defs:
         type: string
       prefix:
         type: string
+      attribute:
+        type: boolean
       wrapped:
         type: boolean
     type: object
+    dependentSchemas:
+      nodeType:
+        properties:
+          attribute: false
+          wrapped: false
     unevaluatedProperties: false
