Allow IRIs for XML namespaces
XML allows IRIs for namespaces, and compares them without any
encoding or decoding.  This means that our requirement that
namespaces are URIs will cause comparisons with other tools that
use IRIs (without mapping them down to URIs) to fail.

This change relaxes the description and allows the use of
unencoded IRIs.

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -60,7 +60,7 @@ $defs:
       name:
         type: string
       namespace:
-        format: uri
+        format: iri
         type: string
       prefix:
         type: string
