docs: adds missing tag definition causing document to be invalid
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/_archive_/schemas/v3.0/pass/petstore.yaml
+++ b/_archive_/schemas/v3.0/pass/petstore.yaml
@@ -6,6 +6,12 @@ info:
     name: MIT
 servers:
   - url: http://petstore.swagger.io/v1
+tags:
+  - name: pets
+    description: Everything about your Pets
+    externalDocs:
+      description: Find out more
+      url: http://swagger.io
 paths:
   /pets:
     get:
