Bring schema test coverage back to 100%
Test cases for
- Response Object with summary
- $self
- Parameter Object with in:querystring

--- a/tests/schema/pass/info-object-example.yaml
+++ b/tests/schema/pass/info-object-example.yaml
@@ -1,5 +1,6 @@
 # including External Documentation Object Example
 openapi: 3.2.0
+$self: https://example.com/openapi
 info:
   title: Example Pet Store App
   summary: A pet store manager.
