--- a/tests/schema/pass/mega.yaml
+++ b/tests/schema/pass/mega.yaml
@@ -19,6 +19,12 @@ components:
   securitySchemes:
     mtls:
       type: mutualTLS
+  schemas:
+    Foo:
+      type: object
+      properties:
+        type:
+          const: foo
   pathItems:
     myPathItem:
       post:
@@ -47,5 +53,9 @@ components:
                     type: ['string','null']
                 discriminator:
                   propertyName: type
+                  mapping:
+                    foo: Foo
                   x-extension: true
+                anyOf:
+                - $ref: "#/components/schemas/Foo"
                 myArbitraryKeyword: true
