Add positive schema tests for XML nodeType

--- a/tests/schema/pass/media-type-examples.yaml
+++ b/tests/schema/pass/media-type-examples.yaml
@@ -53,6 +53,26 @@ paths:
                   type: string
                   xml:
                     attribute: true
+                elementNode:
+                  $ref: "#/components/schemas/Pet"
+                  xml:
+                    nodeType: element
+                attributeNode:
+                  type: string
+                  xml:
+                    nodeType: attribute
+                textNode:
+                  type: string
+                  xml:
+                    nodeType: text
+                cdataNode:
+                  type: string
+                  xml:
+                    nodeType: cdata
+                noneNode:
+                  type: object
+                  xml:
+                    nodeType: none
           application/x-www-form-urlencoded:
             schema:
               type: object
