--- a/.github/workflows/sync-main-to-dev.yaml
+++ b/.github/workflows/sync-main-to-dev.yaml
@@ -10,12 +10,19 @@ name: sync-main-to-dev
 on:
   push:
     branches:
-      - main
+      - main-sync
 
 jobs:
   sync-branch:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate access token
+        id: generate-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ secrets.OAI_SPEC_PUBLISHER_APPID }}
+          private-key: ${{ secrets.OAI_SPEC_PUBLISHER_PRIVATE_KEY }}
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -35,6 +42,6 @@ jobs:
             --title "$BASE: update from $HEAD" \
             --body "Merge \`$HEAD\` into \`$BASE\`."
         env:
-          GH_TOKEN: ${{ github.token }}
-          HEAD: main
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+          HEAD: main-sync
           BASE: dev
