--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "bash ./scripts/md2html/build.sh",
     "build-src": "npm run validate-markdown && bash ./scripts/md2html/build.sh src && bash ./scripts/schema-publish.sh src",
-    "test": "c8 --100 vitest run --coverage",
+    "test": "c8 --100 vitest run --coverage && nyc check-coverage",
     "format-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml --fix src/oas.md && npx markdownlint-cli2 --fix *.md",
     "validate-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml src/oas.md && npx markdownlint-cli2 *.md"
   },
@@ -30,6 +30,7 @@
     "@hyperjump/json-schema-coverage": "^1.0.0",
     "c8": "^10.1.3",
     "markdownlint-cli2": "^0.18.1",
+    "nyc": "^17.1.0",
     "vitest": "^3.2.4",
     "yaml": "^2.8.0"
   },
