--- a/tests/schema/fail/path-item-object-conflicting-additional-operation.yaml
+++ b/tests/schema/fail/path-item-object-conflicting-additional-operation.yaml
@@ -23,6 +23,7 @@ paths:
             text/html:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
+          unexpected: true
     parameters:
       - name: id
         in: path
