Use more likely error as negative test case

--- a/tests/schema/fail/invalid-components-object.yaml
+++ b/tests/schema/fail/invalid-components-object.yaml
@@ -2,15 +2,15 @@ openapi: 3.2.0
 info:
   title: API
   version: 1.0.0
-paths: true
+paths: []
 components:
-  schemas: true
-  responses: true
-  parameters: true
-  examples: true
-  requestBodies: true
-  headers: true
-  securitySchemes: true
-  links: true
-  callbacks: true
-  pathItems: true
+  schemas: []
+  responses: []
+  parameters: []
+  examples: []
+  requestBodies: []
+  headers: []
+  securitySchemes: []
+  links: []
+  callbacks: []
+  pathItems: []
