Schema updates for #4339

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -29,6 +29,8 @@ $defs:
         additionalProperties:
           type: string
         type: object
+      defaultMapping:
+        type: object
       propertyName:
         type: string
     required:
