Apply suggestions from PR review
Co-authored-by: Ralf Handl <ralf.handl@sap.com>

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -30,7 +30,7 @@ $defs:
           type: string
         type: object
       defaultMapping:
-        type: object
+        type: string
       propertyName:
         type: string
     required:
