--- a/tests/schema/pass/mega.yaml
+++ b/tests/schema/pass/mega.yaml
@@ -55,9 +55,7 @@ components:
                   propertyName: type
                   mapping:
                     foo: Foo
-                  defaultMapping:
-                    not:
-                      required: ['type']
+                  defaultMapping: Bar
                   x-extension: true
                 anyOf:
                 - $ref: "#/components/schemas/Foo"
