--- a/tests/schema/fail/encoding-enc-item-exclusion.yaml
+++ b/tests/schema/fail/encoding-enc-item-exclusion.yaml
@@ -4,9 +4,11 @@ info:
   version: 1.0.0
 components:
   requestBodies:
-    content:
-      multipart/mixed:
-        prefixEncoding:
-        - contentType: multipart/mixed
-          encoding: {}
-          prefixEncoding: []
+    encoding-with-prefixEncoding-not-allowed:
+      content:
+        multipart/mixed:
+          encoding:
+            foo:
+              contentType: multipart/mixed
+              encoding: {}
+              prefixEncoding: []
