--- a/tests/schema/fail/invalid-components.yaml
+++ b/tests/schema/fail/invalid-components.yaml
@@ -33,6 +33,9 @@ components:
         responses: false
       patch:
         responses: {}
+      post:
+        responses:
+          invalid: true
   requestBodies:
     no-object: true
     invalid:
